Admin page was added.

--- a/src/Form/RegistrationBundle/Resources/translations/messages.ru.yml
+++ b/src/Form/RegistrationBundle/Resources/translations/messages.ru.yml
@@ -6,3 +6,4 @@ Repeat Password: Повторите пароль
 Login: Логин
 
 The password fields must match.: Поля должны совпадать.
+Check the fields!!!: Проверьте поля!!!
