Password strength validation was added.

--- a/src/Form/RegistrationBundle/Resources/translations/messages.ru.yml
+++ b/src/Form/RegistrationBundle/Resources/translations/messages.ru.yml
@@ -7,3 +7,4 @@ Login: Логин
 
 The password fields must match.: Поля должны совпадать.
 Check the fields!!!: Проверьте поля!!!
+Password contains invalid characters: Пароль содержит запрещённые символы
