cascade validation of forms was added

--- a/src/Form/RegistrationBundle/Resources/translations/messages.ru.yml
+++ b/src/Form/RegistrationBundle/Resources/translations/messages.ru.yml
@@ -4,6 +4,8 @@ Your email: Email
 Password: Пароль
 Repeat Password: Повторите пароль
 Login: Логин
+Role: Роль
+
 
 The password fields must match.: Поля должны совпадать.
 Check the fields!!!: Проверьте поля!!!
