Custom validation constraint was added

--- a/src/Form/RegistrationBundle/Resources/translations/messages.en.yml
+++ b/src/Form/RegistrationBundle/Resources/translations/messages.en.yml
@@ -3,6 +3,7 @@ Your Name: Your Name
 Your email: Your email
 Password: Password
 Repeat Password: Repeat Password
+Role: Role
 
 The password fields must match.: The password fields must match.
 
