Registration and autorisation was improved.

--- a/src/Form/RegistrationBundle/Resources/translations/messages.en.yml
+++ b/src/Form/RegistrationBundle/Resources/translations/messages.en.yml
@@ -1,7 +1,8 @@
 registration: Registration
 Your Name: Your Name
 Your email: Your email
-Password: Password
+Password: PasswordEN
+Login: Login
 Repeat Password: Repeat Password
 Role: Role
 
