Password strength validation was improved.

--- a/src/Form/RegistrationBundle/Resources/translations/messages.en.yml
+++ b/src/Form/RegistrationBundle/Resources/translations/messages.en.yml
@@ -7,6 +7,7 @@ Repeat Password: Repeat Password
 Role: Role
 
 The password fields must match.: The password fields must match.
+Check the fields!!!: Check the fields!!!
 
 Password too short: Password too short !!
 Password contains invalid characters: Password contains invalid characters (\' < > ! , @ | . + = ( ) * & ^ % $ # )
